[project]
name = "warpdb"
version = "0.1.0"
description = "Vector Database in Python"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.131.0,<0.132.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "numpy (>=2.4.2,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
httpx = ">=0.28.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
